--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--맛있는 쥬스를 만들어 드려요!-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="JuiceMaker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="OrderView" id="BYZ-38-t0r" customClass="ViewController" customModule="JuiceMaker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="844" height="390"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -238,7 +238,7 @@
                     <navigationItem key="navigationItem" title="맛있는 쥬스를 만들어 드려요!" id="Eal-fj-o4N">
                         <barButtonItem key="rightBarButtonItem" title="재고수정" id="C3q-Te-cNT">
                             <connections>
-                                <segue destination="Yu1-lM-nqp" kind="presentation" id="jZl-Nj-h4Q"/>
+                                <segue destination="WwV-Td-3Bn" kind="presentation" identifier="EditStoreViewSegue" id="kdh-Dw-xxm"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -272,10 +272,10 @@
             </objects>
             <point key="canvasLocation" x="19.419642857142858" y="92.753623188405811"/>
         </scene>
-        <!--Edit Store View Controller-->
+        <!--재고 추가-->
         <scene sceneID="fkG-vv-hpE">
             <objects>
-                <viewController storyboardIdentifier="editStoreView" id="Yu1-lM-nqp" customClass="EditStoreViewController" customModule="JuiceMaker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EditStoreView" id="Yu1-lM-nqp" customClass="EditStoreViewController" customModule="JuiceMaker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tKV-4l-Vtc">
                         <rect key="frame" x="0.0" y="0.0" width="844" height="390"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -427,47 +427,23 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uU8-lj-E1b">
-                                <rect key="frame" x="0.0" y="0.0" width="844" height="42"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="재고 추가" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G3o-BH-DeK">
-                                        <rect key="frame" x="388.66666666666669" y="10.333333333333334" width="67" height="21.666666666666664"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eI1-aa-MhL">
-                                        <rect key="frame" x="765.33333333333337" y="4" width="53.666666666666629" height="34.333333333333336"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="닫기"/>
-                                        <connections>
-                                            <action selector="dismissButtonTapped:" destination="Yu1-lM-nqp" eventType="touchUpInside" id="2pd-3V-CjF"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemGray5Color"/>
-                                <constraints>
-                                    <constraint firstItem="G3o-BH-DeK" firstAttribute="centerY" secondItem="uU8-lj-E1b" secondAttribute="centerY" id="5mP-5a-BdF"/>
-                                    <constraint firstAttribute="height" constant="42" id="6or-3U-doG"/>
-                                    <constraint firstAttribute="trailing" secondItem="eI1-aa-MhL" secondAttribute="trailing" constant="25" id="Poc-RD-sHA"/>
-                                    <constraint firstItem="G3o-BH-DeK" firstAttribute="centerX" secondItem="uU8-lj-E1b" secondAttribute="centerX" id="QSu-tQ-VOE"/>
-                                    <constraint firstItem="eI1-aa-MhL" firstAttribute="centerY" secondItem="uU8-lj-E1b" secondAttribute="centerY" id="pPg-6p-wCM"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="gcO-Xb-kNs"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="7MH-0F-wAJ" firstAttribute="centerX" secondItem="tKV-4l-Vtc" secondAttribute="centerX" id="3b9-4B-XnS"/>
                             <constraint firstItem="7MH-0F-wAJ" firstAttribute="centerY" secondItem="tKV-4l-Vtc" secondAttribute="centerY" id="4ro-xW-Qnb"/>
-                            <constraint firstAttribute="trailing" secondItem="uU8-lj-E1b" secondAttribute="trailing" id="Cqo-xF-SwP"/>
                             <constraint firstItem="7MH-0F-wAJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="gcO-Xb-kNs" secondAttribute="leading" constant="10" id="LOm-dW-dx6"/>
-                            <constraint firstItem="uU8-lj-E1b" firstAttribute="top" secondItem="tKV-4l-Vtc" secondAttribute="top" id="ffW-OO-GSc"/>
-                            <constraint firstItem="uU8-lj-E1b" firstAttribute="leading" secondItem="tKV-4l-Vtc" secondAttribute="leading" id="mbg-wA-cm4"/>
                             <constraint firstItem="gcO-Xb-kNs" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="7MH-0F-wAJ" secondAttribute="trailing" constant="10" id="rmn-fL-ka4"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="rO2-xT-2dN"/>
+                    <navigationItem key="navigationItem" title="재고 추가" id="rO2-xT-2dN">
+                        <barButtonItem key="rightBarButtonItem" title="닫기" id="9Uh-GH-mNY">
+                            <connections>
+                                <action selector="dismissButtonTapped:" destination="Yu1-lM-nqp" id="jGI-2U-lSw"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="bananaNumberLabel" destination="gKu-86-RhI" id="mBo-IH-1ae"/>
                         <outlet property="bananaStepper" destination="O5s-2N-3iP" id="9W8-Ln-ecP"/>
@@ -493,7 +469,7 @@
         <!--Navigation Controller-->
         <scene sceneID="cAf-jL-tPK">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WwV-Td-3Bn" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="EditStoreNavigationView" automaticallyAdjustsScrollViewInsets="NO" id="WwV-Td-3Bn" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ufw-7J-6hD">
                         <rect key="frame" x="0.0" y="0.0" width="844" height="32"/>
@@ -511,9 +487,6 @@
             <point key="canvasLocation" x="1637" y="21"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="wH1-3A-cBm"/>
-    </inferredMetricsTieBreakers>
     <resources>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
